--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -9,6 +9,7 @@
     <link href="{{ config.STATIC_URL }}/fontawesome/css/font-awesome.min.css?v=4.7.0" rel="stylesheet">
     <link href="{{ config.STATIC_URL }}/snappass/css/custom.css" rel="stylesheet">
     <link rel="icon" type="image/svg" href="{{ config.STATIC_URL }}/images/favicon.svg">
+    <link href="{{ config.STATIC_URL }}/snappass/css/buildBanner.css" rel="stylesheet">
     <!-- Matomo -->
     <script>
       let _paq = window._paq = window._paq || [];
@@ -25,6 +26,7 @@
     <!-- End Matomo Code -->
   </head>
   <body>
+    {% include 'build_banner.html' %}
     {% block content %}{% endblock %}
     <script src="{{ config.STATIC_URL }}/jquery/jquery-3.6.0.min.js"></script>
     <script src="{{ config.STATIC_URL }}/bootstrap/js/bootstrap.min.js"></script>
