add script to control the visibility of build baenner

--- a/snappass/templates/build_banner.html
+++ b/snappass/templates/build_banner.html
@@ -1,5 +1,5 @@
 <!-- <div v-if="!this.bannerClosed"> -->
-<div>
+<div id="outer-container">
     <div class="banner">
         <div class="main-container">
         <div class="row-container">
@@ -23,13 +23,22 @@
             </p>
         </div>
         <div class="row-container">
-            <span>🚧</span>
-            <p> <span class="font-bold"> Environment: </span> {{ TARGET_ENV }} </p>
-            <button class="bannerBtn" v-on:click="closeBanner">
-            &#215;
-            </button>
+            <p> 🚧 <span class="fw-bold"> Environment: </span> {{ TARGET_ENV }} 
+                <span class="bannerBtn" id="bannerBtn" onclick="closeBanner()">
+                    &#215;
+                </span>
+            </p>
         </div>
         </div>
     </div>
     <div class="hidden-whitespace"></div>
 </div>
+<script>
+    let outerDiv = document.getElementById('outer-container');
+    function closeBanner() {
+        outerDiv.style.display = 'none';
+    }
+    if ('{{ TARGET_ENV }}' !== 'development'){
+        closeBanner();
+    }
+</script>
