update the text content

--- a/snappass/templates/info_cards.html
+++ b/snappass/templates/info_cards.html
@@ -1,20 +1,21 @@
+<h2 class="fw-semibold"><span class="text-blue fw-bold">How</span> does SafePass function?</h2>
 <div class="card c1">
     <div class="card-body">
-        <p class="card-text">Secrets are shared through generating a unique short-lived link</p>
+        <p class="card-text">Secrets are shared using a <span class="fw-bolder">unique</span> short-lived link.</p>
     </div>
 </div>
 <div class="card c2">
     <div class="card-body">
-        <p class="card-text"><span class="fw-bolder">NO-ONE</span> can access the secret but person with generated URL</p>
+        <p class="card-text"><span class="fw-bolder">No one</span> can access the secret except the person with the unique link.</p>
     </div>
 </div>
 <div class="card c3">
     <div class="card-body">
-        <p class="card-text">Secret can only be revealed once</p>
+        <p class="card-text">Secrets can only be revealed <span class="fw-bolder">once</span>.</p>
     </div>
 </div>
 <div class="card c4">
     <div class="card-body">
-        <p class="card-text">Expired secrets can never be found</p>
+        <p class="card-text">Expired secrets are <span class="fw-bolder">deleted</span>, even if not revealed.</p>
     </div>
 </div>
