--- a/snappass/templates/info_header.html
+++ b/snappass/templates/info_header.html
@@ -1,7 +1,8 @@
 <h2 class="fst-italic">A secret is shared with you</h2>
 <div class="d-flex flex-column">
-    <p class="info-title">What is Safepass</p>
+    <p class="info-title">What is SafePass</p>
     <p>
-        An open-source tool created by <span class="text-decoration-underline">Jordan Open Source Association (JOSA)</span> to share passwords or secrets safely and securely
+        SafePass is an open source tool
+        which enables you to share passwords or secrets safely and securely.
     </p>
 </div>
