--- a/snappass/templates/secret_info_list.html
+++ b/snappass/templates/secret_info_list.html
@@ -1,4 +1,5 @@
 <ul class="secret-info-list fs-5">
-  <li class="fw-normal">Secret can only be revealed <span class="text-red-2 fw-bold">once</span></li>
-  <li class="fw-normal">Secret will <span class="text-red-2 fw-bold">self destruct</span> either when it's revealed or when lifetime expires</li>
+  <li class="fw-normal">Copy the link and share it using your desired communication channel.</li>
+  <li class="fw-normal">Your secret can only be revealed <span class="text-red-2 fw-bold">once</span></li>
+  <li class="fw-normal">Your secret will <span class="text-red-2 fw-bold">self-destruct</span> when revealed, or after it expires.</li>
 </ul>
