--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -10,13 +10,13 @@
     
     <div class="info-container">
       <p>
-        Safepass is an open-source tool created by Jordan Open Source Association (JOSA)
-        to share passwords or secrets safely and securely.
+        SafePass is an open source tool
+        which enables you to share passwords or secrets safely and securely.
       </p>
       <div>
-        <p class="info-title">Why use Safepass?</p>
+        <p class="info-title">Why should you use SafePass?</p>
         <ul>
-          <li>Reduces the amount of passwords stored in email and chat conversations.</li>
+          <li>Reduces the number of passwords kept in your emails and chat conversations.</li>
           <li>Reduces the risk of someone peeking at your secrets.</li>
         </ul>
       </div>
@@ -40,15 +40,15 @@
         </div>
         <div class="d-flex flex-column justify-content-center gap-4">
           <button type="submit" class="btn btn-primary rounded-custom-2" id="submit">
-            Get Link
+            Generate Link
           </button>
-          <label for="ttl-dropdown" class="mb-n3 fs-6">Time to live</label>
+          <label for="ttl-dropdown" class="mb-n3 fs-6">Expires In</label>
           <select class="form-control border-2 border-red-custom rounded-custom-2"
             name="ttl" id="ttl-dropdown">
             <option value="Two Weeks">Two Weeks</option>
-            <option value="Week" selected="selected">Week</option>
-            <option value="Day">Day</option>
-            <option value="Hour">Hour</option>
+            <option value="Week" selected="selected">One Week</option>
+            <option value="Day">One Day</option>
+            <option value="Hour">One Hour</option>
           </select>
         </div>
       </div>
@@ -58,7 +58,6 @@
 
   <!-- How it works section -->
   <section class="info-cards-section mainpage">
-    <h2 class="fw-semibold"><span class="text-blue fw-bold">How</span> Safepass<br>functions</h2>
     {% include 'info_cards.html' %}
   </section>
 
