--- a/snappass/templates/why_safepass.html
+++ b/snappass/templates/why_safepass.html
@@ -8,6 +8,6 @@
 <a href="/" class="align-self-end">
     <button type="button"
         class="btn btn-primary btn-lg rounded-custom-2 p-3">
-        Share secrets <img class="btn-icon-sm" src="../static/images/arrowhead_right.svg">
+        Share your secrets <img class="btn-icon-sm" src="../static/images/arrowhead_right.svg">
     </button>
 </a>
