--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -31,7 +31,7 @@
       <h3 class="align-self-start d-none d-lg-inline-flex bg-red-custom text-white fw-bolder rounded-top-custom-1 p-3 margin-left-custom mb-n-custom">
         Write a secret
       </h3>
-      <div class="secret-input p-4 w-password-container d-flex flex-column flex-lg-row justify-content-center gap-4 border border-4 border-red-custom rounded-custom-1 shadow-left bg-white">
+      <div class="secret-input w-password-container d-flex flex-column flex-lg-row justify-content-center gap-4 border border-4 border-red-custom rounded-custom-1 shadow-left bg-white">
         <div class="input-group">
           <textarea rows="3" cols="50" id="password"
             name="password" autofocus="true" class="form-control border-0 rounded-custom-2 bg-light-gray p-4" 
@@ -42,11 +42,12 @@
           <button type="submit" class="btn btn-primary rounded-custom-2" id="submit">
             Generate Link
           </button>
-          <label for="ttl-dropdown" class="mb-n3 fs-6">Expires In</label>
-          <select class="form-control border-2 border-red-custom rounded-custom-2"
-            name="ttl" id="ttl-dropdown">
+          <select class="form-control border-2 border-red-custom rounded-custom-2 dropdown-arrow"
+            name="ttl" id="ttl-dropdown" required
+            oninvalid="setCustomValidity('Please choose a valid expiry period')">
+            <option value="" disabled selected hidden>Expires in</option>
             <option value="Two Weeks">Two Weeks</option>
-            <option value="Week" selected="selected">One Week</option>
+            <option value="Week">One Week</option>
             <option value="Day">One Day</option>
             <option value="Hour">One Hour</option>
           </select>
