fix dropdown issue

--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -43,7 +43,7 @@
           </button>
           <select class="form-control border-2 border-red-custom rounded-custom-2 dropdown-arrow"
             name="ttl" id="ttl-dropdown" required
-            oninvalid="setCustomValidity('Please choose a valid expiry period')">
+            oninvalid="setCustomValidity('Please choose a valid expiry period')" oninput="setCustomValidity('')"">
             <option value="" disabled selected hidden>Expires in</option>
             <option value="Two Weeks">Two Weeks</option>
             <option value="Week">One Week</option>
