fix dropdown design

--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -41,7 +41,7 @@
           <button type="submit" class="btn btn-primary rounded-custom-2" id="submit">
             Generate Link
           </button>
-          <select class="form-control border-2 border-red-custom rounded-custom-2 dropdown-arrow"
+          <select class="form-control border border-2 border-red-custom rounded-custom-2 dropdown-arrow"
             name="ttl" id="ttl-dropdown" required
             oninvalid="setCustomValidity('Please choose a valid expiry period')" oninput="setCustomValidity('')"">
             <option value="" disabled selected hidden>Expires in</option>
