--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -1,13 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>SafePass - Share Secrets Safely!</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="{{ config.STATIC_URL }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ config.STATIC_URL }}/fontawesome/css/font-awesome.min.css?v=4.7.0" rel="stylesheet">
-    <link href="{{ config.STATIC_URL }}/snappass/css/custom.css" rel="stylesheet">
+    <link
+      href="{{ config.STATIC_URL }}/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ config.STATIC_URL }}/fontawesome/css/font-awesome.min.css?v=4.7.0"
+      rel="stylesheet"
+    />
+    <link
+      href="{{ config.STATIC_URL }}/snappass/css/custom.css"
+      rel="stylesheet"
+    />
+
+    <!-- Matomo -->
+    <script>
+      let _paq = (window._paq = window._paq || []);
+      _paq.push(["trackPageView"]);
+      _paq.push(["enableLinkTracking"]);
+      (function () {
+        const u = "{{matomo_url}}";
+        _paq.push(["setTrackerUrl", u + "matomo.php"]);
+        _paq.push(["setSiteId", "{{site_id}}"]);
+        let d = document,
+          g = d.createElement("script"),
+          s = d.getElementsByTagName("script")[0];
+        g.async = true;
+        g.src = u + "matomo.js";
+        s.parentNode.insertBefore(g, s);
+      })();
+    </script>
+    <!-- End Matomo Code -->
   </head>
   <body>
     <nav class="navbar navbar-default navbar-static-top">
