--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -25,13 +25,14 @@
       _paq.push(["enableLinkTracking"]);
       (function () {
         const u = "{{matomo_url}}";
-        _paq.push(["setTrackerUrl", u + "matomo.php"]);
+        _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
+        _paq.push(["setTrackerUrl", u + "/matomo.php"]);
         _paq.push(["setSiteId", "{{site_id}}"]);
         let d = document,
           g = d.createElement("script"),
           s = d.getElementsByTagName("script")[0];
         g.async = true;
-        g.src = u + "matomo.js";
+        g.src = u + "/matomo.js";
         s.parentNode.insertBefore(g, s);
       })();
     </script>
